All of a sudden my collage was too small when seen on mobile device. Bg didn't go all the way down, leaving the bottom white. Problem solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,11 @@ nav {
   z-index: -1;
 }
 
+.background-wrapper {
+  height: 200%;
+  width: 100%;
+}
+
 #bg-about {
   background: url("../images/wedding-sweetness.jpg");
   background-position: center;
@@ -344,6 +349,7 @@ h5 {
 
 #photo img {
   width: 100%;
+  height: 100%;
   border: 0;
 }
 
